--- a/src/app/pages/0-home/components/4-home-fourth-screen/home-fourth-screen.component.html
+++ b/src/app/pages/0-home/components/4-home-fourth-screen/home-fourth-screen.component.html
@@ -6,7 +6,7 @@
                 <div class="home__fourth__left__address">
                     <div class="home__fourth__left__address__pointer_wrapper">
                         <img
-                            src="../../../../../assets/icons/pointer.svg"
+                            src="/assets/icons/pointer.svg"
                             alt="Office pointer"
                         />
                     </div>
