--- a/src/app/pages/0-home/components/4-home-fourth-screen/home-fourth-screen.component.scss
+++ b/src/app/pages/0-home/components/4-home-fourth-screen/home-fourth-screen.component.scss
@@ -41,7 +41,7 @@
                 &__pointer {
                     &_wrapper {
                         position: relative;
-                        background-image: url("../../../../../assets/icons/office_pointer.svg");
+                        background-image: url("/assets/icons/office_pointer.svg");
                         background-repeat: no-repeat;
                         width: 68px;
                         height: 68px;
