--- a/src/app/pages/1-about/about.component.html
+++ b/src/app/pages/1-about/about.component.html
@@ -2,4 +2,5 @@
     <app-about-first-screen></app-about-first-screen>
     <app-about-second-screen></app-about-second-screen>
     <app-about-third-screen></app-about-third-screen>
+    <app-about-fourth-screen></app-about-fourth-screen>
 </section>
