--- a/src/app/pages/1-about/components/3-about-third-screen/about-third-screen.component.html
+++ b/src/app/pages/1-about/components/3-about-third-screen/about-third-screen.component.html
@@ -1,6 +1,6 @@
 <div class="about__third">
     <img
-        src="../../../../../assets/images/letters/ampersand.svg"
+        src="/assets/images/letters/ampersand.svg"
         alt="Background ampersand"
         class="about__third_ampersand"
     />
