--- a/src/app/pages/1-about/components/3-about-third-screen/about-third-screen.component.scss
+++ b/src/app/pages/1-about/components/3-about-third-screen/about-third-screen.component.scss
@@ -51,7 +51,7 @@
             }
         }
         &_left {
-            background-image: url("../../../../../assets/images/about/eve.jpg");
+            background-image: url("/assets/images/about/eve.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
