--- a/src/app/pages/0-home/components/2-home-second-screen/home-second-screen.component.html
+++ b/src/app/pages/0-home/components/2-home-second-screen/home-second-screen.component.html
@@ -21,19 +21,8 @@
                 </p>
                 <a href="#" class="home__second__left_link">Подробнее</a>
 
-                <div class="home__second__left_exp">
-                    <div class="home__second__left_exp-item">
-                        <h2 class="home__second__left_exp-number">7</h2>
-                        <span>лет <br> на рынке</span>
-                    </div>
-                    <div class="home__second__left_exp-item">
-                        <h2 class="home__second__left_exp-number">27</h2>
-                        <span>постоянных <br> клиентов</span>
-                    </div>
-                    <div class="home__second__left_exp-item">
-                        <h2 class="home__second__left_exp-number">240</h2>
-                        <span>сделок <br> с недвижимостью</span>
-                    </div>
+                <div class="home__second__left_experience">
+                    <app-experience></app-experience>
                 </div>
 
                 <button class="home__second__left_button">
