--- a/src/app/pages/0-home/components/8-home-eighth-screen/home-eighth-screen.component.html
+++ b/src/app/pages/0-home/components/8-home-eighth-screen/home-eighth-screen.component.html
@@ -66,7 +66,7 @@
         <a [routerLink]="'/about'" class="home__eighth_link-about"
             >О нас
             <img
-                src="../../../../../assets/icons/link_row.svg"
+                src="/assets/icons/link_arrow.svg"
                 alt="About us link row"
             />
         </a>
