feat: added first screen objects, updated crumbs component

--- a/src/app/shared/components/crumbs/crumbs.component.html
+++ b/src/app/shared/components/crumbs/crumbs.component.html
@@ -1,5 +1,5 @@
 <div class="crumbs">
-    <a [routerLink]="link" class="crumbs__title">{{ linkTitle }}</a>
+    <a [routerLink]="'/'" class="crumbs__title">Главная страница</a>
     <img
         src="
     /assets/icons/crumbs_row.svg"
