--- a/src/app/shared/components/crumbs/crumbs.component.scss
+++ b/src/app/shared/components/crumbs/crumbs.component.scss
@@ -6,6 +6,7 @@
     &__title {
         text-decoration: none;
         color: var(--crumbs-title);
+        cursor: pointer;
     }
 
     &__current {
