--- a/src/app/pages/1-about/components/1-about-first-screen/about-first-screen.component.html
+++ b/src/app/pages/1-about/components/1-about-first-screen/about-first-screen.component.html
@@ -1,10 +1,7 @@
 <div class="about__first">
     <div class="about__first_wrapper">
         <div class="container">
-            <app-crumbs
-                [linkTitle]="'Главная страница'"
-                [current]="'О нас'"
-            ></app-crumbs>
+            <app-crumbs [current]="'О нас'"></app-crumbs>
             <h1 class="about__first_title">
                 Сделки <br />
                 на русском языке <br />
