feat: added second screen objects

--- a/src/app/pages/2-all-objects/all-objects.component.html
+++ b/src/app/pages/2-all-objects/all-objects.component.html
@@ -1,3 +1,4 @@
 <section>
     <app-objects-first-screen></app-objects-first-screen>
+    <app-objects-second-screen></app-objects-second-screen>
 </section>
