feat: added third screen objects

--- a/src/app/pages/2-all-objects/all-objects.component.html
+++ b/src/app/pages/2-all-objects/all-objects.component.html
@@ -1,4 +1,5 @@
 <section>
     <app-objects-first-screen></app-objects-first-screen>
     <app-objects-second-screen></app-objects-second-screen>
+    <app-objects-third-screen></app-objects-third-screen>
 </section>
