--- a/src/app/shared/components/swiper/swiper.component.html
+++ b/src/app/shared/components/swiper/swiper.component.html
@@ -72,8 +72,8 @@
                             slide.addedBottomClass
                     }"
                 >
-                    @if (slide.single) { @if (idx === activeSlide && slide.sell
-                    || slide.rent) { @if (slide.sell) {
+                    @if (slide.single) { @if (idx === activeSlide && (slide.sell
+                    || slide.rent)) { @if (slide.sell) {
                     <button class="swiper__slider__home__wrapper_bottom-button">
                         Продажа
                     </button>
@@ -81,7 +81,8 @@
                     <button class="swiper__slider__home__wrapper_bottom-button">
                         Аренда
                     </button>
-                    } } } @else { @if (slide.sell) {
+                    } } } @else { @if (slide.sell || slide.rent) { @if
+                    (slide.sell) {
                     <button class="swiper__slider__home__wrapper_bottom-button">
                         Продажа
                     </button>
@@ -89,7 +90,7 @@
                     <button class="swiper__slider__home__wrapper_bottom-button">
                         Аренда
                     </button>
-                    } }
+                    } } }
 
                     <p class="swiper__slider__home__wrapper_bottom-title">
                         {{ slide.title }}
