feat: added first screen sell

--- a/src/app/pages/1-about/components/4-about-fourth-screen/about-fourth-screen.component.html
+++ b/src/app/pages/1-about/components/4-about-fourth-screen/about-fourth-screen.component.html
@@ -31,7 +31,7 @@
         <div class="navigation__links_left">
             <a [routerLink]="''">
                 <img
-                    src="../../../../../assets/icons/left_arrow_link.svg"
+                    src="/assets/icons/left_arrow_link.svg"
                     alt="Left arrow link"
                 />
                 <span>Вернуться на главную страницу</span></a
@@ -42,7 +42,7 @@
             <a [routerLink]="'/objects'">
                 <span>Все объекты</span>
                 <img
-                    src="../../../../../assets/icons/right_arrow_link.svg"
+                    src="/assets/icons/right_arrow_link.svg"
                     alt="Right arrow link"
                 />
             </a>
