--- a/src/app/pages/2-all-objects/components/3-objects-third-screen/objects-third-screen.component.html
+++ b/src/app/pages/2-all-objects/components/3-objects-third-screen/objects-third-screen.component.html
@@ -23,7 +23,7 @@
         <div class="navigation__links_left">
             <a [routerLink]="''">
                 <img
-                    src="../../../../../assets/icons/left_arrow_link.svg"
+                    src="/assets/icons/left_arrow_link.svg"
                     alt="Left arrow link"
                 />
                 <span>О нас</span></a
@@ -34,7 +34,7 @@
             <a [routerLink]="'/objects'">
                 <span>Купить, продать, арендовать вместе с нами</span>
                 <img
-                    src="../../../../../assets/icons/right_arrow_link.svg"
+                    src="/assets/icons/right_arrow_link.svg"
                     alt="Right arrow link"
                 />
             </a>
