feat: added second rent screen

--- a/src/app/pages/4-rent/components/2-rent-second-screen/rent-second-screen.component.html
+++ b/src/app/pages/4-rent/components/2-rent-second-screen/rent-second-screen.component.html
@@ -1,4 +1,4 @@
-<div class="sell__second">
+<div class="rent__second">
     <div class="container">
         <app-filter-sort
             [title]="title"
@@ -14,13 +14,13 @@
                     src="/assets/icons/left_arrow_link.svg"
                     alt="Left arrow link"
                 />
-                <span>Доступные объекты</span></a
+                <span>Все объекты</span></a
             >
         </div>
 
         <div class="navigation__links_right">
             <a [routerLink]="'/objects'">
-                <span>Объекты в аренду</span>
+                <span>Объекты на продажу</span>
                 <img
                     src="/assets/icons/right_arrow_link.svg"
                     alt="Right arrow link"
