--- a/src/app/pages/4-rent/components/2-rent-second-screen/rent-second-screen.component.scss
+++ b/src/app/pages/4-rent/components/2-rent-second-screen/rent-second-screen.component.scss
@@ -3,7 +3,7 @@
     padding-left: 56px;
 }
 
-.sell__second {
+.rent__second {
     padding-top: 154px;
     min-height: 100vh;
     padding-bottom: 177px;
