--- a/src/app/pages/1-about/components/4-about-fourth-screen/about-fourth-screen.component.html
+++ b/src/app/pages/1-about/components/4-about-fourth-screen/about-fourth-screen.component.html
@@ -27,25 +27,5 @@
         </div>
     </div>
 
-    <div class="navigation__links">
-        <div class="navigation__links_left">
-            <a [routerLink]="''">
-                <img
-                    src="/assets/icons/left_arrow_link.svg"
-                    alt="Left arrow link"
-                />
-                <span>Вернуться на главную страницу</span></a
-            >
-        </div>
-
-        <div class="navigation__links_right">
-            <a [routerLink]="'/objects'">
-                <span>Все объекты</span>
-                <img
-                    src="/assets/icons/right_arrow_link.svg"
-                    alt="Right arrow link"
-                />
-            </a>
-        </div>
-    </div>
+   <app-navigation-bottom-links></app-navigation-bottom-links>
 </div>
