--- a/src/app/pages/2-all-objects/components/3-objects-third-screen/objects-third-screen.component.html
+++ b/src/app/pages/2-all-objects/components/3-objects-third-screen/objects-third-screen.component.html
@@ -19,25 +19,5 @@
             </div>
         </div>
     </div>
-    <div class="navigation__links">
-        <div class="navigation__links_left">
-            <a [routerLink]="''">
-                <img
-                    src="/assets/icons/left_arrow_link.svg"
-                    alt="Left arrow link"
-                />
-                <span>О нас</span></a
-            >
-        </div>
-
-        <div class="navigation__links_right">
-            <a [routerLink]="'/objects'">
-                <span>Купить, продать, арендовать вместе с нами</span>
-                <img
-                    src="/assets/icons/right_arrow_link.svg"
-                    alt="Right arrow link"
-                />
-            </a>
-        </div>
-    </div>
+    <app-navigation-bottom-links></app-navigation-bottom-links>
 </div>
