feat: updated navigation-bottom-links component

--- a/src/app/pages/0-home/components/8-home-eighth-screen/home-eighth-screen.component.html
+++ b/src/app/pages/0-home/components/8-home-eighth-screen/home-eighth-screen.component.html
@@ -62,10 +62,5 @@
             </form>
         </div>
     </div>
-    <div class="home__eighth_link">
-        <a [routerLink]="'/about'" class="home__eighth_link-about"
-            >О нас
-            <img src="/assets/icons/link_arrow.svg" alt="About us link row" />
-        </a>
-    </div>
+    <app-navigation-bottom-links></app-navigation-bottom-links>
 </div>
