--- a/src/app/shared/components/navigation-bottom-links/navigation-bottom-links.component.scss
+++ b/src/app/shared/components/navigation-bottom-links/navigation-bottom-links.component.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     position: absolute;
     bottom: 55px;
+
     &_left,
     &_right {
         position: relative;
@@ -14,9 +15,11 @@
             align-items: center;
             gap: 13px;
             text-decoration: none;
+
             span {
                 position: relative;
                 font-size: 20px;
+
                 &::before {
                     width: 0;
                     content: "";
@@ -25,6 +28,7 @@
                     height: 1px;
                     transition: all 0.5s;
                 }
+
                 &:hover {
                     &::before {
                         content: "";
@@ -38,4 +42,18 @@
             }
         }
     }
+}
+
+.single-link {
+    &_left {
+        justify-content: flex-end;
+    }
+
+    &_right {
+        justify-content: flex-start;
+    }
+}
+
+.hide {
+    display: none;
 }
