feat: added fisrt screen of  detailed component

--- a/src/app/shared/components/crumbs/crumbs.component.html
+++ b/src/app/shared/components/crumbs/crumbs.component.html
@@ -6,5 +6,8 @@
         alt="Crumbs arrow"
         class="crumbs__image"
     />
+    <!-- @if (detailed) {
+        <span class="crumbs__current">{{ detailed }}</span>
+    } -->
     <span class="crumbs__current">{{ current }}</span>
 </div>
