fix: fixed paths according to 17 version

--- a/src/app/pages/0-home/components/2-home-second-screen/home-second-screen.component.html
+++ b/src/app/pages/0-home/components/2-home-second-screen/home-second-screen.component.html
@@ -1,6 +1,6 @@
 <div class="home__second">
     <img
-        src="/assets/images/letters/a.svg"
+        src="assets/images/letters/a.svg"
         alt="Azur letter"
         class="home__second_letter"
     />
@@ -32,7 +32,7 @@
 
             <div class="home__second__right">
                 <img
-                    src="/assets/images/home/natalia.jpg"
+                    src="assets/images/home/natalia.jpg"
                     alt="Natalia Vinogradova The founder of the agency
                 "
                     class="home__second__right-img"
