--- a/src/app/shared/components/crumbs/crumbs.component.html
+++ b/src/app/shared/components/crumbs/crumbs.component.html
@@ -2,7 +2,7 @@
     <a [routerLink]="'/'" class="crumbs__title">Главная страница</a>
     <img
         src="
-    /assets/icons/crumbs_row.svg"
+        assets/icons/crumbs_row.svg"
         alt="Crumbs arrow"
         class="crumbs__image"
     />
