--- a/src/app/shared/components/filter-sort/filter-sort.component.html
+++ b/src/app/shared/components/filter-sort/filter-sort.component.html
@@ -60,7 +60,7 @@ selectedSortBy; track item.id) {
             <img [src]="item.img" [alt]="item.title" />
 
             <div class="order__left__image_top">
-                <img src="/assets/icons/pointer.svg" alt="Pointer Azur" />
+                <img src="assets/icons/pointer.svg" alt="Pointer Azur" />
                 <span>{{ item.address }}</span>
             </div>
 
