--- a/src/app/shared/components/swiper/swiper.component.html
+++ b/src/app/shared/components/swiper/swiper.component.html
@@ -37,7 +37,7 @@
                 } @if (slide.address) {
                 <div class="swiper__slider__home__wrapper_top">
                     <img
-                        src="/assets/icons/pointer.svg"
+                        src="assets/icons/pointer.svg"
                         alt="Slider address pointer"
                     />
                     <span>{{ slide.address }}</span>
