--- a/src/app/pages/2-all-objects/components/3-objects-third-screen/objects-third-screen.component.html
+++ b/src/app/pages/2-all-objects/components/3-objects-third-screen/objects-third-screen.component.html
@@ -12,10 +12,10 @@
 
         <div class="swiper-navigation">
             <div class="objects__third_slider-button-prev">
-                <img src="/assets/icons/prev_slide.svg" alt="Prev slide" />
+                <img src="assets/icons/prev_slide.svg" alt="Prev slide" />
             </div>
             <div class="objects__third_slider-button-next">
-                <img src="/assets/icons/next_slide.svg" alt="Next slide" />
+                <img src="assets/icons/next_slide.svg" alt="Next slide" />
             </div>
         </div>
     </div>
