--- a/src/app/shared/components/detailed-page/components/detailed-first-screen/detailed-first-screen.component.html
+++ b/src/app/shared/components/detailed-page/components/detailed-first-screen/detailed-first-screen.component.html
@@ -9,7 +9,7 @@
                 [current]="data.sell ? 'Продажа' : 'Аренда'"
             ></app-crumbs>
             <div class="detailed__first_address">
-                <img src="/assets/icons/pointer.svg" alt="Location address" />
+                <img src="assets/icons/pointer.svg" alt="Location address" />
                 <span>{{ data.address }}</span>
             </div>
 
@@ -51,7 +51,7 @@
                             ></span
                         >
                     </span>
-                    <img src="/assets/icons/header_divider.svg" alt="Divider" />
+                    <img src="assets/icons/header_divider.svg" alt="Divider" />
                     <span>
                         {{ data.price | currency : "EUR" : "symbol" }}
                     </span>
