--- a/src/app/shared/components/detailed-page/detailed-page.component.html
+++ b/src/app/shared/components/detailed-page/detailed-page.component.html
@@ -2,4 +2,7 @@
     <app-detailed-first-screen
         [data]="currentObject"
     ></app-detailed-first-screen>
+    <app-detailed-second-screen
+        [data]="currentObject"
+    ></app-detailed-second-screen>
 </section>
