feat: added detailed third screen

--- a/src/app/shared/components/detailed-page/detailed-page.component.html
+++ b/src/app/shared/components/detailed-page/detailed-page.component.html
@@ -5,4 +5,5 @@
     <app-detailed-second-screen
         [data]="currentObject"
     ></app-detailed-second-screen>
+    <app-detailed-third-screen></app-detailed-third-screen>
 </section>
