--- a/src/app/shared/components/swiper/swiper.component.scss
+++ b/src/app/shared/components/swiper/swiper.component.scss
@@ -105,5 +105,13 @@
                 }
             }
         }
+        &__detailed {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            max-height: 100vh;
+            max-width: 100vw;
+            overflow: hidden;
+        }
     }
 }
