feat: added detailed fourth screen

--- a/src/app/shared/components/detailed-page/components/3-detailed-third-screen/detailed-third-screen.component.scss
+++ b/src/app/shared/components/detailed-page/components/3-detailed-third-screen/detailed-third-screen.component.scss
@@ -15,7 +15,7 @@
         &:hover {
             svg {
                 path {
-                    stroke: red;
+                    stroke: var(--accent);
                 }
             }
             background-color: var(--primary-semihalf);
