--- a/src/app/shared/components/detailed-page/detailed-page.component.html
+++ b/src/app/shared/components/detailed-page/detailed-page.component.html
@@ -6,4 +6,5 @@
         [data]="currentObject"
     ></app-detailed-second-screen>
     <app-detailed-third-screen></app-detailed-third-screen>
+    <app-detailed-fourth-screen></app-detailed-fourth-screen>
 </section>
