--- a/src/app/shared/components/navigation-bottom-links/navigation-bottom-links.component.html
+++ b/src/app/shared/components/navigation-bottom-links/navigation-bottom-links.component.html
@@ -4,16 +4,31 @@
     [class.single-link_right]="isLastPage"
 >
     <div class="navigation__links_left" [class.hide]="isFirstPage">
+        @if (showSellRentLinks) {
+        <a [routerLink]="'/sell'">
+            <img src="assets/icons/left_arrow_link.svg" alt="Left arrow link" />
+            <span>Объекты на продажу</span>
+        </a>
+        } @else {
+
         <a [routerLink]="previousLink">
-            <img
-                src="assets/icons/left_arrow_link.svg"
-                alt="Left arrow link"
-            />
+            <img src="assets/icons/left_arrow_link.svg" alt="Left arrow link" />
             <span>{{ previousTitle }}</span>
         </a>
+        }
     </div>
 
     <div class="navigation__links_right" [class.hide]="isLastPage">
+        @if (showSellRentLinks) {
+        <a [routerLink]="'/rent'">
+            <span>Объекты в аренду </span>
+            <img
+                src="assets/icons/right_arrow_link.svg"
+                alt="Right arrow link"
+            />
+        </a>
+        } @else {
+
         <a [routerLink]="nextLink">
             <span>{{ nextTitle }}</span>
             <img
@@ -21,5 +36,6 @@
                 alt="Right arrow link"
             />
         </a>
+        }
     </div>
 </div>
