--- a/src/app/pages/7-buy-sell-rent/buy-sell-rent.component.html
+++ b/src/app/pages/7-buy-sell-rent/buy-sell-rent.component.html
@@ -1,4 +1,5 @@
 <section>
     <app-buy-sell-rent-first-screen></app-buy-sell-rent-first-screen>
     <app-buy-sell-rent-second-screen></app-buy-sell-rent-second-screen>
+    <app-buy-sell-rent-third-screen></app-buy-sell-rent-third-screen>
 </section>
