--- a/src/app/pages/7-buy-sell-rent/components/2-buy-sell-rent-second-screen/buy-sell-rent-second-screen.component.scss
+++ b/src/app/pages/7-buy-sell-rent/components/2-buy-sell-rent-second-screen/buy-sell-rent-second-screen.component.scss
@@ -4,6 +4,7 @@
     padding-top: 350px;
     padding-bottom: 50px;
     scroll-behavior: smooth;
+    background-color: var(--background-second);
     &_choice {
         position: absolute;
         top: -2rem;
