refactor: refactored buy-sell-rent third screen

--- a/src/app/pages/7-buy-sell-rent/components/3-buy-sell-rent-third-screen/buy-sell-rent-third-screen.component.html
+++ b/src/app/pages/7-buy-sell-rent/components/3-buy-sell-rent-third-screen/buy-sell-rent-third-screen.component.html
@@ -1,17 +1,17 @@
 <div class="buySellRent__third">
     <div class="container">
-        <div class="buySellRent__third__item buySellRent__third__item_first">
-            <h2 class="buySellRent__third__item_title">купить</h2>
+        <div
+            *ngFor="let realEstate of realEstates; let i = index"
+            class="buySellRent__third__item"
+        >
+            <h2 class="buySellRent__third__item_title">
+                {{ realEstate.title }}
+            </h2>
             <div class="buySellRent__third__items">
                 <div class="buySellRent__third__item_wrapper">
                     <p class="buySellRent__third__item_wrapper-description">
-                        Эксклюзивный выбор апартаментов во Франции. Для того
-                        чтобы выбрать лучший объект недвижимости, нужно сделать
-                        только одно - довериться нам. Свяжитесь с нами, чтобы
-                        подобрать предпочтительный вариант из перечня локаций и
-                        пространств.
+                        {{ realEstate.description }}
                     </p>
-
                     <div class="buySellRent__third__item_wrapper_feedback">
                         <a
                             href=""
@@ -25,90 +25,20 @@
                         </button>
                     </div>
                 </div>
-
-                <a href="" class="buySellRent__third__item_link"
+                <a
+                    [href]="realEstate.actionLink"
+                    class="buySellRent__third__item_link"
                     >Узнать больше</a
                 >
             </div>
             <img
-                src="/assets/images/letters/b.svg"
-                alt=""
-                class="buySellRent__third__item_first-image"
-            />
-        </div>
-
-        <div class="buySellRent__third__item buySellRent__third__item_second">
-            <h2 class="buySellRent__third__item_title">продать</h2>
-
-            <div class="buySellRent__third__items">
-                <div class="buySellRent__third__item_wrapper">
-                    <p class="buySellRent__third__item_wrapper-description">
-                        Осуществить продажу недвижимости во Франции можно легко:
-                        обратитесь к менеджерам Azur Life, чтобы урегулировать
-                        все административные формальности, связанные с вашей
-                        недвижимостью.
-                    </p>
-
-                    <div class="buySellRent__third__item_wrapper_feedback">
-                        <a
-                            href=""
-                            class="buySellRent__third__item_wrapper_feedback-link"
-                            >Свяжитесь с нами или</a
-                        >
-                        <button
-                            class="buySellRent__third__item_wrapper_feedback-button"
-                        >
-                            Оставьте запрос
-                        </button>
-                    </div>
-                </div>
-                <a href="" class="buySellRent__third__item_link"
-                    >Узнать больше</a
-                >
-            </div>
-            <img
-                src="/assets/images/letters/s.svg"
-                alt=""
-                class="buySellRent__third__item_second-image"
-            />
-        </div>
-
-        <div class="buySellRent__third__item buySellRent__third__item_third">
-            <h2 class="buySellRent__third__item_title">арендовать</h2>
-
-            <div class="buySellRent__third__items">
-                <div class="buySellRent__third__item_wrapper">
-                    <p class="buySellRent__third__item_wrapper-description">
-                        Azur Life предоставляет опцию полного сопровождения
-                        сделки аренды. Мы выберем премиальные виллы и
-                        апартаменты под Ваш запрос без комиссии и дополнительных
-                        наценок. Всё, что вам нужно сделать - озвучить Ваши
-                        предпочтения.
-                    </p>
-
-                    <div class="buySellRent__third__item_wrapper_feedback">
-                        <a
-                            href=""
-                            class="buySellRent__third__item_wrapper_feedback-link"
-                            >Свяжитесь с нами или</a
-                        >
-                        <button
-                            class="buySellRent__third__item_wrapper_feedback-button"
-                        >
-                            Оставьте запрос
-                        </button>
-                    </div>
-                </div>
-
-                <a href="" class="buySellRent__third__item_link"
-                    >Узнать больше</a
-                >
-            </div>
-
-            <img
-                src="/assets/images/letters/r.svg"
-                alt=""
-                class="buySellRent__third__item_third-image"
+                [src]="realEstate.imageUrl"
+                alt="Background letter"
+                [ngClass]="{
+                    'buySellRent__third__item_first-image': i === 0,
+                    'buySellRent__third__item_second-image': i === 1,
+                    'buySellRent__third__item_third-image': i === 2
+                }"
             />
         </div>
     </div>
