--- a/src/app/pages/7-buy-sell-rent/buy-sell-rent.component.html
+++ b/src/app/pages/7-buy-sell-rent/buy-sell-rent.component.html
@@ -2,4 +2,8 @@
     <app-buy-sell-rent-first-screen></app-buy-sell-rent-first-screen>
     <app-buy-sell-rent-second-screen></app-buy-sell-rent-second-screen>
     <app-buy-sell-rent-third-screen></app-buy-sell-rent-third-screen>
+    <app-home-eighth-screen
+        [title]="requestTitle"
+        [break]="break"
+    ></app-home-eighth-screen>
 </section>
