feat: added second property-concierge scren

--- a/src/app/pages/7-buy-sell-rent/components/3-buy-sell-rent-third-screen/buy-sell-rent-third-screen.component.scss
+++ b/src/app/pages/7-buy-sell-rent/components/3-buy-sell-rent-third-screen/buy-sell-rent-third-screen.component.scss
@@ -72,6 +72,9 @@
                     border: none;
                     border-radius: 7px;
                     cursor: pointer;
+                    &:hover {
+                        background-color: var(--button-hover);
+                    }
                 }
             }
         }
