--- a/src/app/shared/components/experience/experience.component.html
+++ b/src/app/shared/components/experience/experience.component.html
@@ -1,4 +1,4 @@
-<div class="exp">
+<div class="exp" [ngClass]="{'exp__black': colorBlack}">
     <div class="exp-item">
         <h2 class="exp-number">7</h2>
         <span
