feat: updated feedback component

--- a/src/app/pages/10-property-management/property-management.component.html
+++ b/src/app/pages/10-property-management/property-management.component.html
@@ -1,5 +1,5 @@
 <section>
     <app-property-management-first-screen></app-property-management-first-screen>
     <app-property-management-second-screen></app-property-management-second-screen>
-    <app-feedback></app-feedback>
+    <app-feedback [feedbackTextArea]="true"></app-feedback>
 </section>
